[project]
name = "zorkdemo"
version = "0.3.1"
description = "A (much simplified) port of a famous adventure game to help teach my daughter how to program in Python."
authors = [{ name = "Brandon Corfman", email = "bcorfman@fastmail.fm" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "environs>=9.5.0,<15",
    "hug>=2.6.1,<3",
    "Jinja2>=3.1.2,<4",
    "Markdown>=3.4.1,<4",
    "marshmallow>=3.13.0,<4",
    "peewee>=3.15.4,<4",
    "rich>=13.0.0,<14",
]

[dependency-groups]
dev = [
    "coverage>=7.0.1,<8",
    "flake8>=6.0.0,<7",
    "ipython>=8.7.0,<9",
    "pyinstaller>=6.0.0,<7",
    "pytest>=7.2.0,<8",
    "yapf>=0.32.0,<1",
]

[tool.setuptools]
py-modules = ["zorkdemo"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adventure*", "web*"]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
