[project]
name = "zorkdemo"
version = "0.3.1"
description = "A (much simplified) port of a famous adventure game to help teach my daughter how to program in Python."
authors = [{ name = "Brandon Corfman", email = "bcorfman@fastmail.fm" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.0,<2",
    "environs>=15.0.1,<16",
    "fastapi>=0.136.0,<1",
    "Markdown>=3.4.1,<4",
    "psycopg[binary]>=3.3.3,<4",
    "rich>=15.0.0,<16",
    "SQLAlchemy>=2.0.35,<3",
    "uvicorn>=0.44.0,<1",
    "yazm-py>=0.1.0,<1",
]

[dependency-groups]
dev = [
    "coverage>=7.0.1,<8",
    "httpx>=0.28.0,<1",
    "ipython>=9.13.0,<10",
    "pyinstaller>=6.0.0,<7",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.11,<1",
]

[tool.setuptools]
py-modules = ["zorkdemo"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adventure*", "backend*"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
